--- a/QR Code Generator 1/style.css
+++ b/QR Code Generator 1/style.css
@@ -84,3 +84,21 @@ header p{
 .qr-code img{
   width: 170px;
 }
+@media (max-width: 430px){
+  .wrapper{
+    height: 255px;
+    padding: 16px 20px;
+  }
+  .wrapper.active{
+    height: 510px;
+  }
+  header p{
+    color: #696969;
+  }
+  .form :where(input, button){
+    height: 52px;
+  }
+  .qr-code img{
+    width: 160px;
+  }  
+}
